<resources>
    <string name="app_name">ScreenOrientation</string>
    <string name="user_name">Enter Username</string>
    <string name="user_password">Enter Password</string>
    <string name="login">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- TODO : for login and signup page text -->
    <string name="helloText">HelOw</string>
    <string name="eMail">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="email_field">Enter your username</string>
    <string name="password_field">Enter your password</string>
    <string name="new_user">Signup</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email_address">Email Address</string>
    <string name="create_account">Create Account</string>
    <string name="mobile_number">Mobile number</string>
    <string name="confirm_password">Confirm password</string>

    <!-- TODO : for login page-->
    <string name="hey">Hey.!</string>
    <string name="intro">You can user your fingerprint to access to the app</string>
    <string name="rememberMe">Remember me</string>
    <string name="create_acc">Still without account?</string>
    <string name="create">Create one</string>
    <string name="tuto">Tutorial</string>
    <string name="mobi_chat">Mobi chat</string>
    <string name="support">Support</string>

    <!-- TODO : for business details-->
    <string name="company_name">Company Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="business_cat">Business Category</string>
    <string name="office_add">Office Address</string>
    <string name="ofc_cty">Office City</string>
    <string name="ofc_state">Office State</string>
    <string name="postal_code">Postal Code</string>
    <string name="business_det">Business Details</string>
    <string name="send">Send</string>
    <string name="intro_revolution">Revolution in \nOnline\nPayment</string>
    <string name="ren">RM 50.00</string>
    <string name="renText">Reference id/ Invoice id</string>
    <string name="number1">1</string>
    <string name="number2">2</string>
    <string name="number3">3</string>
    <string name="number4">4</string>
    <string name="number5">5</string>
    <string name="number6">6</string>
    <string name="number7">7</string>
    <string name="number8">8</string>
    <string name="number9">9</string>
    <string name="number_c">C</string>
    <string name="number_0">0</string>
    <string name="number_X">X</string>
    <string name="payment_method">Payment mode</string>
    
</resources>