<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="32dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/title_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/helloText"
        style="@style/Main_Text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        style="@style/Primary_Text"
        app:layout_constraintTop_toBottomOf="@+id/title_signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="First name"
        style="@style/Normal_Text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/edt_firstname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        style="@style/Edit_style"
        app:layout_constraintTop_toBottomOf="@id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Last name"
        android:layout_marginTop="12dp"
        style="@style/Normal_Text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_firstname" />

    <EditText
        android:id="@+id/edt_lastName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Edit_style"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@id/textView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Email"
        android:layout_marginTop="12dp"
        style="@style/Normal_Text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_lastName"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="0dp"
        style="@style/Edit_style"
        android:inputType="textEmailAddress"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/textView4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView4"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Mobile number"
        android:layout_marginTop="12dp"
        style="@style/Normal_Text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_email" />

    <EditText
        android:id="@+id/edt_mobileNumber"
        style="@style/Edit_style"
        android:singleLine="true"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:digits="0123456789"
        app:layout_constraintEnd_toEndOf="@id/textView5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView5" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Password"
        android:layout_marginTop="12dp"
        style="@style/Normal_Text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_mobileNumber"/>
    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        style="@style/Edit_style"
        android:inputType="textPassword"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/textView6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView6" />
    <TextView
        android:id="@+id/errorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_text"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/edt_password"
        app:layout_constraintStart_toStartOf="@id/edt_password"
        app:layout_constraintTop_toBottomOf="@id/edt_password"/>


    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm_password"
        android:layout_marginTop="12dp"
        style="@style/Normal_Text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/errorText" />

    <EditText
        android:id="@+id/edt_confirmPassword"
        android:layout_width="0dp"
        style="@style/Edit_style"
        android:inputType="textPassword"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textView8"
        app:layout_constraintEnd_toEndOf="@id/textView8"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        tools:layout_editor_absoluteY="614dp" />

    <Button
        android:id="@+id/signUp_button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/new_user"
        style="@style/Main_Button"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_confirmPassword" />
</androidx.constraintlayout.widget.ConstraintLayout>